--- a/pom.xml
+++ b/pom.xml
@@ -33,3 +33,13 @@
         </plugins>
     </build>
 </project>
+<packaging>war</packaging>
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.1</version>
+        </plugin>
+    </plugins>
+</build>
